Router for identity/web-socket-session-id
